# ChangeLog for net-libs/webkitgtk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jan 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> +metadata.xml,
  +webkitgtk-29336.ebuild:
  New EBuild for bug 190347 thanks to Joonas, Dale, genstef and helch
