@@ -1,4 +1,6 @@
 DIST WebKit-r29336.tar.bz2 7894999 RMD160 70c304e9848f02400b1bc4e093cfd6a7066bde1b SHA1 aeaf5549622e96b8758e25d2378e77dea8deb36f SHA256 1b669ffff1e851dbf52dbd3cfa987856536ede01c345f6ce0c11688f42e6c8af
+DIST WebKit-r29438.tar.bz2 7909562 RMD160 b2cb97eab9379e41b34b8cf1a408e0b5c5390c3b SHA1 5585cd21cdeacdaf2b739f13f109b4611064e73e SHA256 e817a4fe270ccd10eb64948f992bba556b979a91629bbc82da8ac7d0198f78a9
 EBUILD webkitgtk-29336.ebuild 1203 RMD160 c16da6cecf58a479d9e23686b6c86305261fe985 SHA1 a1f1fdf0ff611c0d503ccdcd1f09eec38df521ca SHA256 92c60b785e1e2c79a21e51e90d208899dbf954d6ea7086abad4ab08941b32793
-MISC ChangeLog 294 RMD160 72de78fd692eebb7d43d4fc535b3d3a2b52943ce SHA1 b61b4776dad6ab61843813e2c33979615cf89f93 SHA256 0b979cd32bff7614d6c7615d690263a3292cd9f73dcc1f2cd64c13a60a5005ef
+EBUILD webkitgtk-29438.ebuild 1203 RMD160 c16da6cecf58a479d9e23686b6c86305261fe985 SHA1 a1f1fdf0ff611c0d503ccdcd1f09eec38df521ca SHA256 92c60b785e1e2c79a21e51e90d208899dbf954d6ea7086abad4ab08941b32793
+MISC ChangeLog 422 RMD160 bb5c33cba5bc82fe2fd57be2522aaff39de5c500 SHA1 802f57b2441a93dc07f4854e4defd6d955cd2120 SHA256 3d73791c77b303019a8c1b0f53217f590ccf07f63e3d3a10a78b0afeac948031
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
